// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leaderboard Component > Basic Rendering > should render Leaderboard excluding podium 1`] = `
<div>
  <div
    class="leaderboard"
  >
    <div
      class="surface row"
      data-testid="leaderboard-row"
      style="--row-index: 0;"
    >
      <div
        class="surface column position"
      >
        4
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player4
        </span>
      </div>
      <span
        class="column streaks"
      />
      <div
        class="column"
      >
        <div
          class="surface score"
        >
          40
        </div>
      </div>
    </div>
    <div
      class="surface row"
      data-testid="leaderboard-row"
      style="--row-index: 1;"
    >
      <div
        class="surface column position"
      >
        5
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player5
        </span>
      </div>
      <div
        class="column"
      >
        <div
          class="surface score"
        >
          20
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Leaderboard Component > Basic Rendering > should render Leaderboard including podium 1`] = `
<div>
  <div
    class="leaderboard"
  >
    <div
      class="surface row gold topPosition"
      data-testid="leaderboard-row"
      style="--row-index: 0;"
    >
      <div
        class="surface column position"
      >
        1
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player1
        </span>
      </div>
      <span
        class="column streaks"
      >
        <div
          class="streakBadge"
        >
          <div
            class="badge small number-5 border"
            style="color: white;"
          >
            5
          </div>
        </div>
      </span>
      <div
        class="column"
      >
        <div
          class="surface score"
        >
          100
        </div>
      </div>
    </div>
    <div
      class="surface row silver topPosition"
      data-testid="leaderboard-row"
      style="--row-index: 1;"
    >
      <div
        class="surface column position"
      >
        2
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player2
        </span>
      </div>
      <span
        class="column streaks"
      >
        <div
          class="streakBadge"
        >
          <div
            class="badge small number-3 border"
            style="color: white;"
          >
            3
          </div>
        </div>
      </span>
      <div
        class="column"
      >
        <div
          class="surface score"
        >
          80
        </div>
      </div>
    </div>
    <div
      class="surface row bronze topPosition"
      data-testid="leaderboard-row"
      style="--row-index: 2;"
    >
      <div
        class="surface column position"
      >
        3
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player3
        </span>
      </div>
      <span
        class="column streaks"
      >
        <div
          class="streakBadge"
        >
          <div
            class="badge small number-2 border"
            style="color: white;"
          >
            2
          </div>
        </div>
      </span>
      <div
        class="column"
      >
        <div
          class="surface score"
        >
          60
        </div>
      </div>
    </div>
    <div
      class="surface row"
      data-testid="leaderboard-row"
      style="--row-index: 3;"
    >
      <div
        class="surface column position"
      >
        4
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player4
        </span>
      </div>
      <span
        class="column streaks"
      />
      <div
        class="column"
      >
        <div
          class="surface score"
        >
          40
        </div>
      </div>
    </div>
    <div
      class="surface row"
      data-testid="leaderboard-row"
      style="--row-index: 4;"
    >
      <div
        class="surface column position"
      >
        5
      </div>
      <div
        class="column nickname"
      >
        <span>
          Player5
        </span>
      </div>
      <div
        class="column"
      >
        <div
          class="surface score"
        >
          20
        </div>
      </div>
    </div>
  </div>
</div>
`;
